# debora

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  render.yaml  start.sh
alembic/: env.py
alembic/versions/: 85569b68d326_initial.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: ChatScreen.tsx  ConsentScreen.tsx  MessageBubble.tsx  SafetyBanner.tsx  TypingIndicator.tsx
src/: config.py  main.py
src/api/: middleware.py
src/api/routes/: chat.py  health.py  sessions.py
src/conversation/: __init__.py  engine.py  system_prompt.py
src/db/: __init__.py  base.py  models.py  session.py
src/memory/: __init__.py  context.py  store.py
src/rag/: __init__.py  embedder.py  pipeline.py  reranker.py  retriever.py  sources.py
src/reasoning/: __init__.py  distortion_detector.py  emotion_detector.py  engine.py
src/reasoning/frameworks/: __init__.py  act.py  cbt.py  dbt.py  motivational_interviewing.py  positive_psychology.py
src/recommendations/: __init__.py  engine.py  strategies.py
src/safety/: __init__.py  crisis_detector.py  layer.py  protocols.py  resources.py
src/utils/: llm.py  logger.py  prompts.py  responder.py
tests/: conftest.py
tests/test_conversation/: conftest.py  test_api.py
tests/test_memory/: test_context.py
tests/test_reasoning/: test_engine.py
tests/test_recommendations/: test_strategies.py
tests/test_safety/: test_crisis_detector.py  test_protocols.py
